test/trivial/deitz/test_var_decl_strange1.good
Error: Variable 'y' used before defined (test_var_decl_strange1.chpl:1)
